fix: resolve overflow issues

--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -17,6 +17,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .reviews {
+    width: 100vw;
+    overflow: hidden;
+  }
   .reviews > h3 {
     text-align: center;
   }
