--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -1,5 +1,5 @@
 .app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -12,4 +12,11 @@
   /* flex-grow: 1; */
   width: 100%;
   padding-top: 4rem;
+}
+
+@media screen and (max-width: 768px) {
+  .app {
+    width: 100vw;
+    overflow: hidden;
+  }
 }
